crates/chatters-lib/src/snapshots/chatters_lib__commands__tests__list_completion-3.snap
---
source: crates/chatters-lib/src/commands.rs
expression: "complete_from_list(\"b\", &list)"
---
[
    Completion {
        display: "bar",
        append: "ar",
    },
    Completion {
        display: "baz",
        append: "az",
    },
]
