crates/chatters-lib/src/snapshots/chatters_lib__commands__tests__list_completion-4.snap
---
source: crates/chatters-lib/src/commands.rs
expression: "complete_from_list(\"bar\", &list)"
---
[
    Completion {
        display: "bar",
        append: "",
    },
]
